--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -238,7 +238,7 @@ o_restore_arabian_engineer_speech
 
 o_restore_arabian_engineer_speech_descr
 {
-"Позволяет инженерам говорить на  арабском языке, когда игрок использует арабского лорда.
+"Позволяет инженерам говорить на арабском языке, когда игрок использует арабского лорда.
 
 Фразы не сильно отличаются друг от друга, так что через некоторое время они могут стать раздражающими."
 }
@@ -480,12 +480,12 @@ ai_fix_laddermen_with_enclosed_keep_descr
 
 o_override_identity_menu
 {
-    "Переопределить меню "Set-up Identity", добавляя новые функции."
+    "Добавить выбор стартовых юнитов игроку"
 }
 
 o_override_identity_menu_descr
 {
-    "Добавляет выбор юнитов дальнего и ближнего боя в меню Set-up Identity". ТОЛЬКО ДЛЯ ОБЫЧНОГО ИГРОВОГО РЕЖИМА!"
+    "Добавляет выбор стартовых юнитов дальнего и ближнего боя в специальном меню". ТОЛЬКО ДЛЯ ОБЫЧНОГО ИГРОВОГО РЕЖИМА!"
 }
 
 o_default_multiplayer_speed
@@ -754,7 +754,7 @@ ui_other
 
 o_responsivegates
 {
-	"Быстрая реакция юнитов на врагов"
+	"Более быстрая реакция ворот на действия противника"
 }
 
 o_responsivegates_descr
@@ -811,7 +811,7 @@ o_playercolor_descr
 
 ai_demolish
 {
-	"Выключить снос зданий для AI Лордов чтобы восполнить деньги"
+	"Выключить снос зданий для AI Лордов чтобы восполнить недостаток золота"
 }
 
 ai_demolish_walls
@@ -842,7 +842,7 @@ ai_tethers
 
 ai_tethers_descr
 {
-	"Как правило, AI строит для каждой новой каменоломни новую привязь &
+	"Как правило AI строит для каждой новой каменоломни новую привязь &
 независимо от того сколько привязей уже существует. Здесь это можно отключить, так как &
 это приводит к спаму привязей если карьеры AI будут уничтожены повторно."
 }
@@ -1110,13 +1110,13 @@ ai_rebuild_descr
 
 o_healer
 {
-	"Целитель лечит раненых солдат"
+	"Знахарь лечит раненых солдат"
 }
 
 o_healer_descr
 {
-	"Целитель из здания аптеки теперь активно ищет раненых солдат, жителей и животных чтобы исцелить их. Ближайшие цели от целителя лечатся первыми.
-Проигрывается анимация ,и целитель исцеляет за 1/3 секунды здоровье копейщика. Когда Целитель прогуливается он может рассеять облако чумы которое он заметит.
+	"Знахарь из здания аптеки теперь активно ищет раненых солдат, жителей и животных чтобы исцелить их. Ближайшие цели от знахаря лечатся первыми.
+Проигрывается анимация ,и знахарь исцеляет за 1/3 секунды здоровье копейщика. Когда Знахарь прогуливается он может рассеять облако чумы которое он заметит.
 Он будет лечить в одной области замка всех пока не вылечет до конца, а только потом он перейдет к другому участку замка.
 Также он не будет рассеивать облака чумы пока он не сходит в сады."
 }
